[package]
name = "migrate_v1_requirements"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
assert_cmd = "2.0.13"
clap = { version = "4.4.18", features = ["derive"] }
common = { path = "../common" }
predicates = "3.1.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
tempfile = "3.10.0"