[package]
name = "yatm_v2"
author = "Audrow Nash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
askama = "0.12.1"
clap = { version = "4.4.18", features = ["derive"] }
common = { path = "../common" }
itertools = "0.12.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
