[package]
name = "yatm_v2"
author = "Audrow Nash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
askama = "0.12.1"
async-recursion = "1.0.5"
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
common = { path = "../common" }
dotenv = "0.15.0"
itertools = "0.12.1"
octocrab = "0.33.4"
percent-encoding = "2.3.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
tempfile = "3.10.0"
tokio = { version = "1.36.0", features = ["full"] }
url = "2.5.0"
