[package]
name = "yatm_v2"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
askama = "0.12.1"
assert_cmd = "2.2.1"
async-recursion = "1.0.5"
chrono = "0.4.33"
clap = { version = "4.6.1", features = ["derive"] }
common = { path = "../common" }
dotenv = "0.15.0"
itertools = "0.14.0"
octocrab = "0.49.9"
percent-encoding = "2.3.1"
predicates = "3.1.4"
serde = { version = "1.0.218", features = ["derive"] }
serde_yaml = "0.9.31"
tempfile = "3.27.0"
tokio = { version = "1.52.1", features = ["full"] }
url = "2.5.0"

[features]
github_tests = []
